--- a/src/main/resources/templates/admin/forms/update.html
+++ b/src/main/resources/templates/admin/forms/update.html
@@ -31,23 +31,23 @@
                 <ul class="list-unstyled">
                     <li>
                         <a role="button" title="Modifier le modèle" type="button" class="btn-floating btn-lg bg-primary" data-bs-toggle="modal" data-bs-target="#updateModel">
-                            <i class="fi fi-rr-cloud-upload fa-2xl" style="margin-top: 16px"></i>
+                            <i class="fi fi-rr-cloud-upload fa-2xl" style="margin-top: 10px;"></i>
                         </a>
                     </li>
                     <li>
                         <a class="btn-floating btn-lg bg-primary" title="Exporter le circuit" role="button" th:href="'/' + ${workflowRole} + '/forms/export/' + ${form.id}">
-                            <i class="fi fi-rr-file-export fa-2xl" style="margin-top: 16px"></i>
+                            <i class="fi fi-rr-file-export fa-2xl" style="margin-top: 10px;"></i>
                         </a>
                     </li>
                     <li>
                         <a role="button" title="Importer la configuration d'un circuit" type="button" class="btn-floating btn-lg bg-primary" data-bs-toggle="modal" data-bs-target="#importWorkflow">
-                            <i class="fi fi-rr-file-import fa-2xl" style="margin-top: 16px"></i>
+                            <i class="fi fi-rr-file-import fa-2xl" style="margin-top: 10px;"></i>
                         </a>
                     </li>
                     <li>
                         <a id="saveButton" title="Enregistrer" role="button" class="btn-floating btn-lg bg-success"
                             onclick="$('#formUpdate').submit();">
-                            <i class="fi fi-rr-disk fa-2xl" style="margin-top: 16px"></i>
+                            <i class="fi fi-rr-disk fa-2xl" style="margin-top: 10px;"></i>
                         </a>
                     </li>
                 </ul>
