--- a/src/main/resources/templates/fragments/sides/side-manager.html
+++ b/src/main/resources/templates/fragments/sides/side-manager.html
@@ -8,7 +8,7 @@
 
         <a th:classappend="${activeMenu == 'workflows'} ? 'btn-secondary' : 'btn-light'"
            title="Circuits de signature" href="/manager/workflows" class="btn col-12 mb-1 text-left border-light-subtle">
-            <i class="fa-solid fa-project-diagram project-diagram-color"></i> <span class="sidebar-label">Circuits</span>
+            <i class="fi fi-rr-diagram-project project-diagram-color"></i> <span class="sidebar-label">Circuits</span>
         </a>
         <a th:classappend="${activeMenu == 'forms'} ? 'btn-secondary' : 'btn-light'"
            title="Formulaires" href="/manager/forms" class="btn col-12 mb-1 text-left border-light-subtle">
