--- a/src/main/resources/templates/user/wizard/wiz-new-step.html
+++ b/src/main/resources/templates/user/wizard/wiz-new-step.html
@@ -8,12 +8,12 @@
     <div id="stepper1" class="bs-stepper linear">
         <div class="bs-stepper-header" role="tablist">
             <div class="step" data-bs-target="#test-l-2">
-                <span class="bs-stepper-circle bg-success"><i class="fa-solid fa-copy"></i></span>
+                <span class="bs-stepper-circle bg-success"><i class="fi fi-rr-cloud-upload-alt"></i></span>
                 <span class="bs-stepper-label">Dépôt des fichiers</span>
             </div>
             <div class="bs-stepper-line"></div>
             <div class="step active" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-project-diagram"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-diagram-project"></i></span>
                 <span class="bs-stepper-label">Création du circuit</span>
             </div>
             <div class="bs-stepper-line"></div>
@@ -23,7 +23,7 @@
             </div>
             <div class="bs-stepper-line"></div>
             <div class="step" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-flag-checkered"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-flag"></i></span>
                 <span class="bs-stepper-label">Fin</span>
             </div>
         </div>
@@ -155,7 +155,7 @@
         <i class="fi fi-rr-disk"></i> Terminer et annoter
     </button>
     <button formnovalidate id="end-workflow-sign-start" name="end-workflow-sign" value="true" th:if="${signBook.liveWorkflow.liveWorkflowSteps.size() > 0}" type="button" class="btn btn-success float-end m-1">
-        <i class="fa-solid fa-paper-plane"></i> Terminer et envoyer
+        <i class="fi fi-rr-paper-plane"></i> Terminer et envoyer
     </button>
 </div>
 </html>
