--- a/src/main/resources/templates/user/wizard/wiz-new-workflow-step.html
+++ b/src/main/resources/templates/user/wizard/wiz-new-workflow-step.html
@@ -8,7 +8,7 @@
     <div id="stepper1" class="bs-stepper linear">
         <div class="bs-stepper-header" role="tablist">
             <div class="step active" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-project-diagram"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-diagram-project"></i></span>
                 <span class="bs-stepper-label">Création du circuit</span>
             </div>
             <div class="bs-stepper-line"></div>
@@ -18,7 +18,7 @@
             </div>
             <div class="bs-stepper-line"></div>
             <div class="step" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-flag-checkered"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-flag"></i></span>
                 <span class="bs-stepper-label">Fin</span>
             </div>
         </div>
@@ -180,7 +180,7 @@
         <i class="fa-solid fa-plus"></i> Enregistrer cette étape
     </button>
     <button id="wiz-end" name="wiz-exit" value="true" th:if="${workflow != null && workflow.workflowSteps.size() > 0}" type="button" class="btn btn-success">
-        <i class="fa-solid fa-flag-checkered"></i> Terminer
+        <i class="fi fi-rr-flag"></i> Terminer
     </button>
 </div>
 </html>
