--- a/src/main/resources/templates/user/wizard/wiz-workflow-sign.html
+++ b/src/main/resources/templates/user/wizard/wiz-workflow-sign.html
@@ -22,12 +22,12 @@
     <div id="stepper1" class="bs-stepper linear">
         <div class="bs-stepper-header" role="tablist">
             <div class="step active" data-bs-target="#test-l-2">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-copy"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-cloud-upload-alt"></i></span>
                 <span class="bs-stepper-label">Dépôt des fichiers</span>
             </div>
             <div class="bs-stepper-line"></div>
             <div class="step" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-project-diagram"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-diagram-project"></i></span>
                 <span class="bs-stepper-label">Création du circuit</span>
             </div>
             <div class="bs-stepper-line"></div>
@@ -37,7 +37,7 @@
             </div>
             <div class="bs-stepper-line"></div>
             <div class="step" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-flag-checkered"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-flag"></i></span>
                 <span class="bs-stepper-label">Fin</span>
             </div>
         </div>
