--- a/src/main/resources/templates/admin/signbooks/includes/status.html
+++ b/src/main/resources/templates/admin/signbooks/includes/status.html
@@ -39,7 +39,7 @@
 			<span th:text="#{'signbook.status.' + ${signBook.status}}"></span>
 		</div>
 		<div th:case="${T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).completed}" class="badge rounded-pill badge-status bg-success" th:title="#{'signbook.status.' + ${signBook.status}}">
-			<i class="fa-solid fa-flag-checkered"></i>
+			<i class="fi fi-rr-flag"></i>
 				<span th:text="#{'signbook.status.' + ${signBook.status}}"></span>
 		</div>
 		<div th:case="*">
