--- a/src/main/resources/templates/fragments/sides/side-home.html
+++ b/src/main/resources/templates/fragments/sides/side-home.html
@@ -18,7 +18,7 @@
             <i class="fa-solid fa-tools"></i> <span class="sidebar-label">Outils de signature</span>
         </button>
         <button tabindex="10" id="workflowFilterButton" title="Circuits" type="button" class="btn btn-light mb-1 col-12 text-left border-light-subtle">
-            <i class="fa-solid fa-project-diagram project-diagram-color"></i> <span class="sidebar-label">Circuits</span>
+            <i class="fi fi-rr-diagram-project project-diagram-color"></i> <span class="sidebar-label">Circuits</span>
         </button>
         <button tabindex="10" id="formFilterButton" th:classappend="${activeMenu == 'datas'} ? 'bg-secondary'" title="Formulaires" class="btn btn-light mb-1 col-12 text-left border-light-subtle">
             <i class="fa-solid fa-file-alt file-alt-color"></i> <span class="sidebar-label">Formulaires</span>
