--- a/src/main/resources/templates/user/signrequests/nexu-signature-process.html
+++ b/src/main/resources/templates/user/signrequests/nexu-signature-process.html
@@ -69,7 +69,7 @@
                     <strong>Signature effectuée</strong>
                     <br/>
                     <a th:href="'/user/signrequests/' + ${id}" class="btn btn-success" id="return2">
-                        <i class="fa-solid fa-flag-checkered fa-2xl"></i><br/> Retour
+                        <i class="fi fi-rr-flag fa-2xl"></i><br/> Retour
                     </a>
                 </div>
             </div>
