--- a/src/main/resources/templates/user/wizard/wiz-fast-sign.html
+++ b/src/main/resources/templates/user/wizard/wiz-fast-sign.html
@@ -151,7 +151,7 @@
     <button type="button" id="send-pending-button" class="btn btn-success">
         <div class="send-form-spinner spinner-border d-none" style="width: 1rem; height: 1rem;">
         </div>
-        <i class="fa-solid fa-paper-plane"></i> Envoyer immédiatement la demande
+        <i class="fi fi-rr-paper-plane"></i> Envoyer immédiatement la demande
     </button>
 </div>
 </html>
