--- a/src/main/resources/templates/user/wizard/wiz-save-workflow.html
+++ b/src/main/resources/templates/user/wizard/wiz-save-workflow.html
@@ -7,7 +7,7 @@
 <div class="modal-body">
 <div class="bs-stepper-header" role="tablist">
     <div class="step" data-bs-target="#test-l-3">
-        <span class="bs-stepper-circle bg-success"><i class="fa-solid fa-project-diagram"></i></span>
+        <span class="bs-stepper-circle bg-success"><i class="fi fi-rr-diagram-project"></i></span>
         <span class="bs-stepper-label">Création du circuit</span>
     </div>
     <div class="bs-stepper-line"></div>
@@ -17,7 +17,7 @@
     </div>
     <div class="bs-stepper-line"></div>
     <div class="step" data-bs-target="#test-l-3">
-        <span class="bs-stepper-circle"><i class="fa-solid fa-flag-checkered"></i></span>
+        <span class="bs-stepper-circle"><i class="fi fi-rr-flag"></i></span>
         <span class="bs-stepper-label">Fin</span>
     </div>
 </div>
