--- a/src/main/resources/templates/user/wizard/wiz-setup-workflow.html
+++ b/src/main/resources/templates/user/wizard/wiz-setup-workflow.html
@@ -7,12 +7,12 @@
 <div class="modal-body">
     <div class="bs-stepper-header" role="tablist">
         <div class="step" data-bs-target="#test-l-2">
-            <span class="bs-stepper-circle bg-success"><i class="fa-solid fa-copy"></i></span>
+            <span class="bs-stepper-circle bg-success"><i class="fi fi-rr-cloud-upload-alt"></i></span>
             <span class="bs-stepper-label">Dépôt des fichiers</span>
         </div>
         <div class="bs-stepper-line"></div>
         <div class="step" data-bs-target="#test-l-3">
-            <span class="bs-stepper-circle bg-success"><i class="fa-solid fa-project-diagram"></i></span>
+            <span class="bs-stepper-circle bg-success"><i class="fi fi-rr-diagram-project"></i></span>
             <span class="bs-stepper-label">Création du circuit</span>
         </div>
         <div class="bs-stepper-line"></div>
@@ -22,7 +22,7 @@
         </div>
         <div class="bs-stepper-line"></div>
         <div class="step" data-bs-target="#test-l-3">
-            <span class="bs-stepper-circle"><i class="fa-solid fa-flag-checkered"></i></span>
+            <span class="bs-stepper-circle"><i class="fi fi-rr-flag"></i></span>
             <span class="bs-stepper-label">Fin</span>
         </div>
     </div>
@@ -41,7 +41,7 @@
     <button type="button" id="send-pending-button" class="btn btn-success">
         <div class="send-form-spinner spinner-border d-none" style="width: 1rem; height: 1rem;">
         </div>
-        <i class="fa-solid fa-paper-plane"></i> Envoyer immédiatement la demande
+        <i class="fi fi-rr-paper-plane"></i> Envoyer immédiatement la demande
     </button>
 </div>
 </html>
