--- a/src/main/resources/templates/user/manage/list.html
+++ b/src/main/resources/templates/user/manage/list.html
@@ -44,7 +44,7 @@
                                     class="btn btn-sm btn-primary"><i class="fa-solid fa-file-export"></i> Export des données</a>
                             </td>
                             <td>
-                                <button th:if="${managedForms.contains(workflow)}" type="button" class="btn btn-sm btn-primary" th:data-bs-target="'#sendModal_' +  ${workflow.id}"  data-bs-toggle="modal"><i class="fa-solid fa-paper-plane"></i> Envoyer le formulaire</button>
+                                <button th:if="${managedForms.contains(workflow)}" type="button" class="btn btn-sm btn-primary" th:data-bs-target="'#sendModal_' +  ${workflow.id}"  data-bs-toggle="modal"><i class="fi fi-rr-paper-plane"></i> Envoyer le formulaire</button>
                                 <div th:if="${managedForms.contains(workflow)}" data-bs-focus="false" class="modal fade" th:id="'sendModal_' +  ${workflow.id}"  role="dialog" aria-hidden="true">
                                     <div class="modal-dialog modal-lg" role="document">
                                         <div class="modal-content modal-lg">
