--- a/src/main/resources/templates/user/signrequests/includes/workspace.html
+++ b/src/main/resources/templates/user/signrequests/includes/workspace.html
@@ -162,18 +162,18 @@
                 </div>
             </th:block>
             <th:block th:each="spot, iterator : ${spots}" th:if="${isManager && signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).pending}">
-                <div class="spot" th:id="'inDocSpot_' + ${spot.id}" th:title="${spot.text != null && spot.text != ''} ? ${spot.text} : 'Cliquer pour supprimer l’emplacement de signature'"
+                <div class="spot" th:id="'inDocSpot_' + ${spot.id}" title="Cliquer pour supprimer l’emplacement de signature"
                     th:onmouseover="'$(\'#liveStep-' + ${spot.stepNumber} + '\').addClass(\'circle-border\');'"
                     th:onmouseout="'$(\'#liveStep-' + ${spot.stepNumber} + '\').removeClass(\'circle-border\');'">
-                    <div th:id="'inDocSign_' + ${spot.id}" style="color: #000; width: 300px; height: 150px;" class="sign-field" th:data-es-delete="${isManager} ? 'true' :''">
+                    <div th:id="'inDocSign_' + ${spot.id}" style="color: #000; width: 200px; height: 100px;" class="sign-field" th:data-es-delete="${isManager} ? 'true' :''">
                         <span th:if="${isManager}" th:text="'Cliquer pour supprimer l’emplacement de signature étape ' + ${spot.stepNumber}"></span>
                         <span th:unless="${isManager}" th:text="'Emplacement de signature pour l\'étape ' + ${spot.stepNumber}"></span>
                     </div>
                 </div>
             </th:block>
             <th:block th:each="spot, iterator : ${spots}" th:if="${isManager && signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).draft}">
-                <div class="spot" th:id="'inDocSpot_' + ${spot.id}" th:title="${spot.text != null && spot.text != ''} ? ${spot.text} : 'Cliquer pour supprimer l’emplacement de signature'">
-                    <div th:id="'inDocSign_' + ${spot.id}" style="color: #000; width: 300px; height: 150px;" class="sign-field" th:data-es-delete="${isManager} ? 'true' :''">
+                <div class="spot" th:id="'inDocSpot_' + ${spot.id}" title="Cliquer pour supprimer l’emplacement de signature">
+                    <div th:id="'inDocSign_' + ${spot.id}" style="color: #000; width: 200px; height: 100px;" class="sign-field" th:data-es-delete="${isManager} ? 'true' :''">
                         <span th:if="${isManager}" th:text="'Cliquer pour supprimer l’emplacement de signature'"></span>
                         <span th:unless="${isManager}" th:text="'Emplacement de signature détecté"></span>
                     </div>
@@ -185,11 +185,11 @@
                     <input id="commentPosY" name="commentPosY" type="hidden"/>
                     <input id="commentPageNumber" name="commentPageNumber" type="hidden"/>
                     <textarea id="postitComment" name="comment" class="form-control postitarea float-start mb-2" placeholder="Saisir un commentaire" required></textarea>
-                    <button id="hideCommentButton" type="button" class="btn btn-sm btn-danger float-start">
-                        <i class="fa-solid fa-times"></i>
+                    <button id="hideCommentButton" type="button" class="btn btn-sm btn-danger float-start d-flex">
+                        <i class="fi fi-rr-cross-small"></i>
                     </button>
-                    <button id="saveCommentButton" type="button" class="btn btn-sm btn-success float-end">
-                        <i class="fa-solid fa-save"></i>
+                    <button id="saveCommentButton" type="button" class="btn btn-sm btn-success float-end d-flex">
+                        <i class="fi fi-rr-disk"></i>
                     </button>
             </div>
 
@@ -340,7 +340,7 @@
                             Annuler
                         </button>
                         <button id="save-spot-button" th:data-es-signrequest-id="${signRequest.id}" type="button" class="btn btn-sm btn-success float-end">
-                            <i class="fa-solid fa-save"></i> Enregistrer
+                            <i class="fi fi-rr-disk"></i> Enregistrer
                         </button>
                     </form>
                 </div>
